# br_hardware_interface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
Sparkfun Drivers/: sparkfun.cat  sparkfun.inf
br_hardware_interface/: CMakeLists.txt  package.xml
br_hardware_interface/firmware/board_profiles/byteszero/: variant.cpp
br_hardware_interface/firmware/scripts/MKRZero_Firmware/: CustomInterrupts.ino  MKRZero_Firmware.ino  README.txt  TSS.cpp  WInterrupts.c
br_hardware_interface/firmware/scripts/Single_Ultrasonic_Test/: CustonInterrupt.ino
br_hardware_interface/firmware/scripts/stm32_firmware/: stm32_firmware.ino
br_hardware_interface/include/br_hw_interface/: br_hw_interface.hpp  pid.hpp
br_hardware_interface/include/gpio/: gpio.h
br_hardware_interface/include/serial/: serial.h
br_hardware_interface/include/serial/impl/: unix.h  win.h
br_hardware_interface/include/usb_hw_interface/: arduino_com.hpp
br_hardware_interface/launch/: hw_interface_with_control.launch.py
br_hardware_interface/scripts/: introspection_util.py
br_hardware_interface/src/: br_hw_interface.cpp  gpio.cpp  pid.cpp  serial.cpp
br_hardware_interface_msgs/: CMakeLists.txt  package.xml
br_hardware_interface_msgs/msg/: HardwareInterfaceDebug.msg
config/: hardware.yaml  joint_limits.yaml
firmware/: Variants location.lnk
firmware/board_profiles/: README.md  byteszero_addon.txt
include/br_hw_interface/: br_hw_interface.h  br_hw_interface.hpp  br_hw_old.h  pid.h  pid.hpp
include/gb_hw_interface/: gb_hw.h  gb_hw_interface.h
include/gpio/: gpio.h
launch/: hw_interface.launch  hw_interface.launch.py  roscontrol_hw_interface.launch
old/: package.xml
params/: hw_interface_params.yaml
scripts/: Packages & Variants location.lnk  kinematic_constraints_test.py  variant.cpp
src/: arduino_com.cpp  br_hw_interface.cpp  br_hw_node.cpp  gpio.cpp  gps_variance_calculator.py  hw_interface.cpp  pid.cpp  roscontrol_hw_interface.cpp  roscontrol_hw_interface_node.cpp  unix.cpp
(+51 files in other folders)
